--- a/Fit-planner/package.json
+++ b/Fit-planner/package.json
@@ -12,12 +12,9 @@
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.7.0",
         "@babel/preset-react": "^7.0.0",
-        "axios": "^0.19.0",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0"
@@ -26,6 +23,9 @@
         "bootstrap": "^4.3.1",
         "jquery": "^3.4.1",
         "react-bootstrap": "^1.0.0-beta.15",
-        "react-router-dom": "^5.1.2"
+        "react-router-dom": "^5.1.2",
+        "axios": "^0.19.0",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
     }
 }
